# pgp-proxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  db.rs  error.rs  keys.rs  mailbox.rs  main.rs  pgp_engine.rs  policy.rs  private_keys.rs  queue.rs  users.rs
src/fetch/: account_store.rs  imap_client.rs  mod.rs  poller.rs  pop3_client.rs
src/pop3/: server.rs
src/smtp/: client.rs  server.rs
src/web/: mod.rs  routes.rs  templates.rs
tests/: integration.sh
