[package]
name = "pgp-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pgp-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
pgp = "0.14"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
config = "0.14"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
maud = { version = "0.26", features = ["axum"] }
argon2 = "0.5"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.7"
